--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,40 +1,71 @@
-
-
 .input{
     border: 1px solid #00d8f5;
-    border-radius: 15px 0px 0px 15px;
+    border-radius: 12px 0px 0px 12px;
     background-color: white;
-    font-size: 18px;
+    font-size: 20px;
     font-family: "WubbaLubbaDubDub";
+    margin-left: 10px;
+    color: green;
 }
 
-.button{
-    border-radius: 0px 15px 15px 0px;
-    border: 0px;
-    background-color: #00d8f5;
-    height: 2em;
+.boton {
+    width: 100px;
+    height: 35px;
+    border: none;
+    outline: none;
     color: black;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
     font-family: "WubbaLubbaDubDub";
-    /* animation: lights 4000ms infinite ease-in; */
+    font-size: 23px;
 }
 
-.button:hover {
-    background: #00a0b7;
-    text-decoration: none;
-    color: white;
+.boton:before {
+    content: '';
+    background: linear-gradient(45deg, #8ffe77, #00d8f5, #8ffe77, #00d8f5, #8ffe77, #00d0ff, #8ffe77, #00d0ff, #8ffe77);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 0px 12px 12px 0px;
 }
 
-@keyframes lights {
-    0% {
-    border: 1.5px solid #00ff00;
-    }
-    50% {
-    border: 1.5px solid #68ff68;
-    }
-    70% {
-    border: 1.5px solid #68ff68;
-    }
-    100% {
-    border: 1.5px solid #00ff00;
-    }
+.boton:active {
+    color: #000
+}
+
+.boton:active:after {
+    background: transparent;
+}
+
+.boton:hover:before {
+    opacity: 1;
+}
+
+.boton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00d8f5;
+    left: 0;
+    top: 0;
+    border-radius: 0px 12px 12px 0px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
