--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,7 +3,7 @@
 .card{
     border-radius: 5px;
     width: 200px;
-    height: 280px;
+    height: 299px;
     font-weight: bold;
     padding-top: 7px;
     position: relative;
@@ -12,7 +12,7 @@
     background-position: center center;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(1,0,16,0.832847787552521) 0%, rgba(0,0,0,0.6619794402135855) 100%);    
-    margin: 25px 0px 0px 10px;
+    margin: 30px 0px 0px 10px;
     animation: lights 4000ms infinite ease-in;
 }
 
@@ -20,7 +20,7 @@
 .card:hover{
     transform: translate(0px, -20px) scale(1.0, 1.0);
     color: black;    
-	--border-size: 1px;
+	--border-size: 2px;
 	--border-angle: 0turn;
 	background-image: conic-gradient(from var(--border-angle), #000000, #090607 50%, #000000), conic-gradient(from var(--border-angle), transparent 20%, #0095aa, #00ff00);
 	 background-size: calc(100% - (var(--border-size) * 3)) calc(100% - (var(--border-size) * 3)), cover;
@@ -46,7 +46,7 @@
     width: 160px;
     height: 160px;
     border-radius: 100px  ;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .imagen:hover{
@@ -104,4 +104,12 @@
     100% {
     border: 1px solid #0095aa;
     }
+}
+
+.corazon{
+    position: absolute;
+    background: none;
+    border: none;
+    left: 153px;
+    font-size: 25px;
 }
