--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -24,13 +24,16 @@
     /* margin: 48px; */
     display: flex;
     justify-content:center;
-    padding: 53px
+    padding: 58px;
+    background-image: url("../Asserts/fondo-body.jpg");
+    background-repeat: no-repeat;
 }
 .contenedorForm{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    background-color: black;
     background-image: url("../Asserts/fondoForm.jpg");
     padding: 30px;
     width: 320px;
@@ -87,7 +90,7 @@
     width: 120px;
     height: 30px;
     position: absolute;
-    bottom: 150px;
+    bottom: 85px;
 }
 .botonForm:hover{
     border: 2px solid #8ffe77;
@@ -140,7 +143,7 @@
     padding-top: 0px;
     margin-top: 5px;
     position: absolute;
-    top: 155px;
+    top: 160px;
 }
 
 .p2{
