--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,29 +1,70 @@
 .navegador{
-    background-color: black;
-    padding: 0.5em;
+    background-image: linear-gradient(to left, hsl(210, 80%, 10%), hsl(180, 60%, 5%), hsl(310, 80%, 10%));    padding: 0.5em;
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: center;
     animation: nave 4000ms infinite ease-in;
+    height: 40px;
+    
 }
 
-.boton {
+.homeButton {
+width: 100px;
+height: 35px;
+border: none;
+outline: none;
+color: black;
+background: #00d8f5;
+position: absolute;
+z-index: 0;
+border-radius: 10px;
+margin: 0 auto;
+left: 50%;
+transform: translateX(-50%);
+font-family: "WubbaLubbaDubDub";
+font-size: 23px;
+box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.favoritesButton {
     width: 95px;
     height: 35px;
     border: none;
     outline: none;
     color: black;
-    background: #111;
-    cursor: pointer;
-    position: relative;
+    background: #00d8f5;
+    position: absolute;
     z-index: 0;
     border-radius: 10px;
-    margin:0px 10px 0px 10px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    transform: translateX(0%);
     font-family: "WubbaLubbaDubDub";
     font-size: 23px;
+    left:230px
 }
 
-.boton:before {
+.aboutButton{
+    width: 95px;
+    height: 35px;
+    border: none;
+    outline: none;
+    color: black;
+    background: #00d8f5;
+    position: absolute;
+    z-index: 0;
+    border-radius: 10px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    transform: translateX(0%);
+    font-family: "WubbaLubbaDubDub";
+    font-size: 23px;
+    right:230px
+}
+
+.aboutButton:before {
     content: '';
     background: linear-gradient(45deg, #8ffe77, #00d8f5, #8ffe77, #00d8f5, #8ffe77, #00d0ff, #8ffe77, #00d0ff, #8ffe77);
     position: absolute;
@@ -40,19 +81,142 @@
     border-radius: 10px;
 }
 
-.boton:active {
+.aboutButton:active {
     color: #000
 }
 
-.boton:active:after {
+.aboutButton:active:after {
     background: transparent;
 }
 
-.boton:hover:before {
+.aboutButton:hover:before {
     opacity: 1;
 }
 
-.boton:after {
+.aboutButton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00d8f5;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.homeButton:before {
+    content: '';
+    background: linear-gradient(45deg, #8ffe77, #00d8f5, #8ffe77, #00d8f5, #8ffe77, #00d0ff, #8ffe77, #00d0ff, #8ffe77);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.homeButton:active {
+    color: #000
+}
+
+.homeButton:active:after {
+    background: transparent;
+}
+
+.homeButton:hover:before {
+    opacity: 1;
+}
+
+.homeButton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00d8f5;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.homeButton:before {
+    content: '';
+    background: linear-gradient(45deg, #8ffe77, #00d8f5, #8ffe77, #00d8f5, #8ffe77, #00d0ff, #8ffe77, #00d0ff, #8ffe77);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.homeButton:active {
+    color: #000
+}
+
+.homeButton:active:after {
+    background: transparent;
+}
+
+.homeButton:hover:before {
+    opacity: 1;
+}
+
+.homeButton:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00d8f5;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.favoritesButton:before {
+    content: '';
+    background: linear-gradient(45deg, #8ffe77, #00d8f5, #8ffe77, #00d8f5, #8ffe77, #00d0ff, #8ffe77, #00d0ff, #8ffe77);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.favoritesButton:active {
+    color: #000
+}
+
+.favoritesButton:active:after {
+    background: transparent;
+}
+
+.favoritesButton:hover:before {
+    opacity: 1;
+}
+
+.favoritesButton:after {
     z-index: -1;
     content: '';
     position: absolute;
