--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
+*{
+  cursor: url("./components/Asserts/1mouse.png"), auto;
+}
+
+
+
+
 body {
-  margin: 0px;
-  padding: 0px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-family: 'getSchwifty';
 } 
 
 code {
