--- a/Client/src/components/Favorites/Favorite.module.css
+++ b/Client/src/components/Favorites/Favorite.module.css
@@ -1,3 +1,8 @@
+.conteedorFavorites{
+    background-image: linear-gradient(to bottom, hsl(210, 80%, 10%), hsl(180, 60%, 5%), hsl(310, 80%, 10%));    
+    height:70vw;
+}
+
 .contenedorFavs{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -6,7 +11,7 @@
     padding-top: 50px;
     padding-left: 35px;
     padding-bottom: 10px;
-    height: 100%;
+
 }
 
 
