--- a/Client/src/components/Characters/Characters.module.css
+++ b/Client/src/components/Characters/Characters.module.css
@@ -31,7 +31,7 @@
   height: 45px;
   width: 200px;
   position: relative;
-  left: 90px;
+  right: 0px;
   background-color: #8ffe77;
   color: black;
   font-size: 1rem;
@@ -57,7 +57,7 @@
 
 .portalLoading{
   position: relative;
-  top: 180px;
+  top: 150px;
   width: 300px;
   height: 280px;
   border-radius: 999px;
@@ -67,7 +67,7 @@
 .loading{
   font-size: 35px;
   position: relative;
-  top: 180px;
+  top: 150px;
 }
 
 .error{
@@ -88,4 +88,10 @@
 	100% {
 		transform: rotate(360deg);
 	}
+}
+
+.botonTop{
+  position: absolute;
+  top: 1880px;
+  right: 80px;
 }
